Bug 1340620 - Use inverted loading icons with Compact Theme. r=Gijs
For selected tabs, the Compact Themes use bright blue tab background colors,
which makes the blue loading icon hard to see.  For this state, use a white
loading icon instead.

MozReview-Commit-ID: 5P2VWgR4Iue

UltraBlame original commit: 62736acb85d02f7fe6e8135a46646b7fa0e4703b

--- a/browser/themes/shared/compacttheme.inc.css
+++ b/browser/themes/shared/compacttheme.inc.css
@@ -2681,6 +2681,97 @@ color
 .
 tab
 -
+throbber
+[
+selected
+]
+[
+progress
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+compacttheme
+/
+loading
+-
+inverted
+.
+png
+"
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+1dppx
+)
+{
+.
+tab
+-
+throbber
+[
+selected
+]
+[
+progress
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+compacttheme
+/
+loading
+-
+inverted
+2x
+.
+png
+"
+)
+;
+}
+}
+.
+tab
+-
 icon
 -
 sound
